[package]
name = "pam-jit"
description = "generic PAM module that enforces time boundaries based on rules stored in an LDAP directory"
version = "0.1.0"
edition = "2021"
authors = ["kamran.khan <kamran.khan@salesforce.com>" , "ytesis <ytesis@salesforce.com>" , "nikhil.narayana <nikhil.narayana@salesforce.com>"]
repository = "https://github.com/salesforce/pam-jit"
readme = "README.md"
license = "LICENSE"
keywords = ["pam", "jit", "just-in-time", "authz", "ldap"]
categories = ["Operating systems"]

[lib]
name = "pam_jit"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "pam_jit"
path = "src/main.rs"

[dependencies]
pam-bindings = "0.1.1"
config = "0.12.0"
ldap3 = "0.11.1"
native-tls = "0.2.11"
chrono = "0.4.24"
scopeguard = "1.1.0"
gethostname = "0.4.1"
file-rotate = "0.7.3"
rsa = "0.8.2"
pem = "1.1.1"
